some changes in style and html

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <body>
     <div class="code">
-        <div class="code-head"><img src="images/image-qr-code.png"></div>
+        <div class="code-head"><img src="images/image-qr-code.png" alt="qr-code"></div>
         <div class="code-body">
             <h2>
                 Improve your front-end <br> skills by building projects
