delete folder and change in readme

--- a/index.html
+++ b/index.html
@@ -4,9 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- displays site properly based on user's device -->
-
-    <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+    <link rel="icon" href="./images/favicon.ico">
     <link rel="stylesheet" href="css/style.css">
     <title>Frontend Mentor | QR code component</title>
 </head>
@@ -16,10 +14,10 @@
         <div class="code-head"><img src="images/image-qr-code.png" alt="qr-code"></div>
         <div class="code-body">
             <h2>
-                Improve your front-end <br> skills by building projects
+                Improve your front-end skills by building projects
             </h2>
             <p>
-                Scan the QR code to visit Frontend <br> Mentor and take your coding skills to <br> the next level
+                Scan the QR code to visit Frontend Mentor and take your coding skills to the next level
             </p>
         </div>
     </div>
